V3.31 (29.03.2018)
 - changed the default filter to the same that is used by Flamelet which creates nice sharp images,
   if you do not like it, you may change it in the Preferences 
 - new variations:
	- apollony (Jesus Sosa)
	- chrysanthemum (Jesus Sosa)
	- dc_dmodulus (Jesus Sosa, Rick Sidwell, and Brad Stefanov)
	- dc_gnarly (Rick Sidwell, and Brad Stefanov)
	- dustpoint (Jesus Sosa)
	- iconattractor (Jesus Sosa)
	- knots3D_js (Jesus Sosa)	
	- macmillan_js (Jesus Sosa)
	- recurrenceplot_js (Jesus Sosa)
	- seashell3D (Jesus Sosa)
	- sattractor3d (Jesus Sosa)
	- threepoint (Jesus Sosa)
	- prepost_circlize (Rick Sidwell)
	- prepost_affine (Rick Sidwell)
	- prepost_mobius (Rick Sidwell)
		---Prepost variations are executed both before the other variations (along
		with other pre_ variations) and after the other variations (along with
		other post_ variations). One of the two will be an inverse function,
		calling invtransform instead of transform. Prepost variations are
		identified with priority 2 (calls invtransform for pre and transform for
		post) or -2 (calls transform for pre and invtransform for post).---
 - updated variations:	
	- hamid_js - added more variables
	- jubiq - made it respect other 3D objects instead of making it flat
	- siercarpet_js - added preserveZ
	- parplot2d_wf - added a solid variable by default no new changes. Set to 0 they react more like traditional flames
	- pre_stabilize - Added a direct color option to pre_stabilize for coloring glitch flames
 - fixes
	- Make random gradients without fade colors use the right number of colors.
	- Bug fixes and enhancements to parameter list
		1. Pre button for variation 11 didn't work
		2. Slider for params with dynamic parameter expansion didn't work
		3. Added tool tip with full name when parameter name is truncated
	- Fix bugs with duplicate transform
		1. Final transforms now duplicate as final transforms
		2. Normal transforms now duplicate From Xaos as well as To Xaos